[Backend] Implementar endpoint de PUT/DELETE usando token en lugar de ID

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
       "@models/*": ["models/*"],
       "@routes/*": ["routes/*"],
       "@controllers/*": ["controllers/*"],
-      "@middlewares/*": ["middlewares/*"],
+      "@middleware/*": ["middleware/*"],
       "@utils/*": ["utils/*"]
     }
   },
