--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.3",
-    "nodemailer": "^7.0.6"
+    "multer": "^2.0.2",
+    "nodemailer": "^7.0.6",
+    "pexels": "^1.4.0",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -32,8 +35,10 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.6.0",
     "@types/nodemailer": "^7.0.2",
+    "@types/streamifier": "^0.1.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.2"
