--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pexels": "^1.4.0",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "@types/node": "^24.6.0",
+    "@types/express": "^5.0.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
