--- a/package.json
+++ b/package.json
@@ -26,19 +26,17 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "pexels": "^1.4.0",
-    "streamifier": "^0.1.1",
-    "@types/node": "^24.6.0",
-    "@types/express": "^5.0.3"
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "@types/express": "^5.0.4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.6.0",
+    "@types/node": "^24.9.1",
     "@types/nodemailer": "^7.0.2",
     "@types/streamifier": "^0.1.2",
     "ts-node-dev": "^2.0.0",
